Fix chart footer alignment

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -75,6 +75,7 @@ h2.hook a {
 
 .graph-footer {
 	color: #777;
+	margin-left: 40px;
 }
 
 .component-arrow {
